feat: hello wortl

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -304,6 +304,9 @@
 }
 
 @media (max-width: 768px) {
+  .hideEmail {
+    display: none;
+  }
   .nonActive,
   .renderNonActive {
     border-bottom: none;
