--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -8,7 +8,7 @@
   justify-content: space-between;
   transition: ease-in-out 0.3s;
   background: white;
-
+  overflow: hidden;
   .card {
     position: relative;
 
