--- a/src/globals.css
+++ b/src/globals.css
@@ -12,6 +12,180 @@
   font-family: "Montserrat", sans-serif;
 }
 
+/* Tour slider styles */
+
+.mainSliders {
+  overflow-x: hidden !important;
+}
+
+.dots {
+  top: 300px !important;
+}
+
+.dots li.slick-active button:before {
+  content: "" !important;
+  background: #2e325a !important;
+  border-radius: 20px !important;
+  width: 11px !important;
+  height: 11px !important;
+  margin: 0 !important;
+  opacity: 1 !important;
+}
+
+.hide {
+  visibility: hidden;
+  opacity: 0;
+  height: 0;
+  width: 0;
+}
+
+.hideSelect {
+  display: none;
+}
+
+.dots li button:before {
+  content: "" !important;
+  background: #ffffff;
+  border: 1px solid #2e325a;
+  border-radius: 20px !important;
+  width: 11px !important;
+  height: 11px !important;
+  margin: 0 !important;
+  opacity: 1 !important;
+}
+
+.video-player {
+  width: 70% !important;
+  margin: 70px auto;
+}
+
+.video-react-icon {
+  display: block;
+  margin: auto;
+}
+
+@media (max-width: 786px) {
+  .video-player {
+    width: 100% !important;
+    margin: 0 auto;
+    position: absolute;
+    z-index: 10000;
+    /* margin-top: 100px; */
+  }
+}
+
+.video-react video {
+  width: 100%;
+  height: 100%;
+}
+
+.dots li button {
+  width: 100px;
+}
+
+.main .slick-slide {
+  margin: 0 !important;
+}
+
+.main .slick-list {
+  height: 100% !important;
+}
+
+/* Слайды */
+.mainSliders .slick-slide {
+  width: 460px !important;
+  margin: 0 5px;
+}
+
+@media (max-width: 1585px) {
+  .mainSliders .slick-slide {
+    width: 490px !important;
+    margin: 0 5px;
+  }
+}
+
+@media (max-width: 1445px) {
+  .mainSliders .slick-slide {
+    width: 462px !important;
+    margin: 0 5px;
+  }
+}
+
+@media (max-width: 1285px) {
+  .mainSliders .slick-slide {
+    width: 410px !important;
+    margin: 0 5px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .mainSliders .slick-slide {
+    width: 345px !important;
+    margin: 0 5px;
+  }
+}
+
+@media (max-width: 1025px) {
+  .mainSliders .slick-slide {
+    width: 325px !important;
+    margin: 0 5px;
+  }
+}
+
+@media (max-width: 950px) {
+  .mainSliders .slick-slide {
+    width: 300px !important;
+  }
+}
+
+@media (max-width: 900px) {
+  .mainSliders .slick-slide {
+    width: 284px !important;
+  }
+}
+
+@media (max-width: 850px) {
+  .mainSliders .slick-slide {
+    width: 275px !important;
+  }
+}
+
+@media (max-width: 800px) {
+  .mainSliders .slick-slide {
+    width: 251px !important;
+  }
+}
+
+@media (max-width: 700px) {
+  .mainSliders .slick-slide {
+    width: 329px !important;
+  }
+}
+
+@media (max-width: 425px) {
+  .mainSliders .slick-slide {
+    width: 255px !important;
+    margin: 0 5px;
+  }
+}
+
+/* Родительский элемент */
+.mainSliders .slick-list {
+  margin: 0 -2px;
+}
+
+.slick-track {
+  display: flex !important;
+}
+
+.mainSliders .slick-list {
+  height: 300px !important;
+}
+
+.mainSliders .dots li button {
+  width: 50px;
+}
+
 .container,
 .container-fluid,
 .container-lg,
