--- a/src/components/TourFIltering/TourFiltering.module.scss
+++ b/src/components/TourFIltering/TourFiltering.module.scss
@@ -8,19 +8,71 @@
 
 .wrapper {
   width: 100%;
-  height: 80vh;
+  height: fit-content;
   display: flex;
   justify-content: space-between;
-  gap: 20px;
+  gap: 10px;
+  padding: 25px 0px;
+  transition: width 0.2s cubic-bezier(0.51, 0.18, 0, 0.88);
+
   .filter {
-    background-color: #c3c3c3;
-    height: 100%;
+    background-color: #efefef;
+    height: fit-content;
     min-width: 30%;
+    padding: 25px 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    box-shadow: #c3c3c3;
+    border-radius: 3px;
+    p {
+      padding-left: 10px;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 17px;
+      width: fit-content;
+      cursor: pointer;
+    }
+
+    p::before {
+      content: "";
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      -moz-border-radius: 7.5px;
+      -webkit-border-radius: 7.5px;
+      border-radius: 7.5px;
+      background-color: #fff;
+      margin-right: 5px;
+      border: 1px solid #333333;
+      cursor: pointer;
+      transform: translateY(15%);
+    }
+
+    p.active_title::before {
+      background-color: #333333;
+      border: #ffffff 1px solid;
+      width: 15px;
+      height: 15px;
+    }
+
+    p.inactive_title::before {
+      background-color: #fff;
+      border: 1px solid #333333;
+    }
   }
 
   .tours {
-    background-color: #c3c3c3;
+    background-color: #efefef;
     height: 100%;
-    min-width: 70%;
+    min-width: 68%;
+    padding: 25px 15px;
+    border-radius: 3px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
   }
 }
