--- a/src/components/SelectTour/SelectTour.module.scss
+++ b/src/components/SelectTour/SelectTour.module.scss
@@ -11,6 +11,8 @@
     margin-top: 1rem;
     margin-bottom: 1rem;
     gap: 1rem;
+    border-bottom: 1px solid black;
+    padding-bottom: -5px;
 
     .filterWrap {
       display: flex;
@@ -33,7 +35,7 @@
         &::before {
           content: "";
           position: absolute;
-          top: calc(100% + 6%);
+          top: calc(100% + 25%);
           width: 0;
           right: 0;
           height: 3px;
