--- a/src/app/(tours)/tours/[id]/TourUi/Tour.module.scss
+++ b/src/app/(tours)/tours/[id]/TourUi/Tour.module.scss
@@ -62,4 +62,85 @@
       }
     }
   }
+
+  @media (max-width: 768px) {
+    .container {
+      margin-top: 80%;
+    }
+  }
+}
+
+.divider {
+  margin-top: 5%;
+  border-bottom: 1px solid #c3c3c3;
+
+  h1 {
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 39px;
+    color: #c3c3c3;
+  }
+}
+
+.moreAboutTour {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+
+  div {
+    background-color: #476b55;
+    width: 100%;
+    padding: 10px 15px 15px;
+    p {
+      background-color: #fff;
+      padding: 10px;
+      height: 70px;
+    }
+    h5 {
+      color: white;
+      padding-left: 10px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
+}
+
+.tourDescription {
+  background-color: #efefef;
+  margin-top: 3%;
+  padding: 30px 0px;
+  .DescDivider {
+    border-bottom: 1px solid #c3c3c3;
+
+    h1 {
+      font-size: 32px;
+      font-weight: 500;
+      line-height: 39px;
+      color: #474747;
+    }
+  }
+  p {
+    font-size: 20px;
+    line-height: 36px;
+    font-weight: 500;
+  }
+}
+
+.sights {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  .divider {
+    border-bottom: 1px solid #c3c3c3;
+    padding-bottom: 5px;
+
+    h1 {
+      font-size: 32px;
+      line-height: 39px;
+      color: #c3c3c3;
+    }
+  }
 }
