--- a/src/components/TourFIltering/TourFiltering.module.scss
+++ b/src/components/TourFIltering/TourFiltering.module.scss
@@ -7,6 +7,7 @@
 }
 
 .wrapper {
+  transition: all ease-in-out .4s;
   width: 100%;
   height: fit-content;
   display: flex;
@@ -25,6 +26,15 @@
     gap: 10px;
     box-shadow: #c3c3c3;
     border-radius: 3px;
+    input {
+      width: 50%;
+      min-height: 40px;
+      padding: 5px;
+      margin: 0 auto;
+      border-radius: 3px;
+      outline: none;
+      margin-bottom: 5px;
+    }
     p {
       padding-left: 10px;
       font-weight: 500;
@@ -63,6 +73,7 @@
   }
 
   .tours {
+      transition: all ease-in-out .4s;
     background-color: #efefef;
     height: 100%;
     min-width: 68%;
