--- a/src/app/profile/MyToursList/BookedCard/BookedCard.module.scss
+++ b/src/app/profile/MyToursList/BookedCard/BookedCard.module.scss
@@ -6,7 +6,7 @@
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  width: 300px;
+  // width: 300px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 
   &:hover {
