--- a/src/app/profile/MyToursList/BookedCard/BookedCard.module.scss
+++ b/src/app/profile/MyToursList/BookedCard/BookedCard.module.scss
@@ -6,14 +6,15 @@
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  // width: 300px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
 
   &:hover {
     transform: translateY(-5px);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   }
 }
+
 
 .cardImage {
   width: 100%;
