--- a/src/app/(sights)/sights/[id]/SightUi/Sight.module.scss
+++ b/src/app/(sights)/sights/[id]/SightUi/Sight.module.scss
@@ -13,6 +13,8 @@
   justify-content: center;
   position: relative;
 
+  text-align: center;
+
   .title {
     position: absolute;
     color: #ffffffcc;
