--- a/src/app/(tours)/tours/[id]/TourUi/Tour.module.scss
+++ b/src/app/(tours)/tours/[id]/TourUi/Tour.module.scss
@@ -12,6 +12,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  text-align: center;
 
   .title {
     position: absolute;
